--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   "author": "Cyril Vimard <cvimard@synthesio.com>",
   "license": "ISC",
   "dependencies": {
-    "lodash": "^4.17.2",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "lodash": "4.17.2",
+    "react": "15.4.1",
+    "react-dom": "15.4.1"
   },
   "devDependencies": {
-    "babel-core": "^6.20.0",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "react-hot-loader": "^1.3.1",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2"
+    "babel-core": "6.20.0",
+    "babel-loader": "6.2.10",
+    "babel-preset-es2015": "6.18.0",
+    "babel-preset-react": "6.16.0",
+    "react-hot-loader": "1.3.1",
+    "webpack": "1.14.0",
+    "webpack-dev-server": "1.16.2"
   }
 }
